--- a/index.html
+++ b/index.html
@@ -626,13 +626,9 @@
 		  <div class="setup-info">
 			<h3><i class="fas fa-info-circle"></i> راهنمای راه‌اندازی</h3>
 			<ol>
-			  <li>برای استفاده از این سیستم، نیاز به ایجاد Bin در سایت jsonbin.io دارید</li>
-			  <li>پس از ساخت حساب کاربری، یک Bin جدید ایجاد کنید</li>
-			  <li>ساختار داده‌ها باید به صورت زیر باشد: <code>{"comments": []}</code></li>
-			  <li>مقادیر Bin ID و API Key خود را در کد جایگذاری کرده‌ام</li>
-			  <li>سیستم آماده استفاده است!</li>
+			  <li></li>
 			</ol>
-			<p>برای اطلاعات بیشتر به <a href="https://jsonbin.io/" target="_blank">سایت jsonbin.io</a> مراجعه کنید.</p>
+			<p>برای اطلاعات بیشتر به <a href="https://io/" target="_blank">سایتio</a> مراجعه کنید.</p>
 		  </div>
 
 		  <div class="comment-form">
@@ -671,7 +667,7 @@
     <div class="notification" id="notification">متن با موفقیت کپی شد!</div>
 
     <footer>
-	  <p>ساخته شده با ❤️ | سیستم چندمنظوره تبدیل تصویر به بریل و نظرات</p>
+	  <p>ساخته شده با  سیستم  تبدیل تصویر به بریل و نظرات</p>
     </footer>
 
 <script>
